--- a/index.html
+++ b/index.html
@@ -8,8 +8,36 @@
 </head>
 
 <body>
-    <h1>Hello HTML</h1>
-    <img src="img/колобок.jpeg" alt="kolobok">
+    <header>
+        <h1>Hello</h1>
+        <hr>
+        <h2>Сoнячна система</h2>
+    </header>
+    <main>
+        <ul>
+            <ol>Меркурій</ol>
+            <ol>Венера</ol>
+            <ol>Земля</ol>
+            <ol>Марс</ol>
+            <ol>Юпітер</ol>
+            <ol>Сатурн</ol>
+            <ol>Уран</ol>
+            <ol>Нептун</ol>
+        </ul>
+
+    </main>
+    <footer>
+        <p>Сонячна система — планетна система,<br> що включає в себе центральну зорю — Сонце,<br> і всі природні
+            космічні
+            об'єкти (планети, астероїди,<br> комети, потоки сонячного вітру тощо), <br>які об'єднуються гравітаційною
+            взаємодією[6]. Сонячна система є частиною значно більшого комплексу, <br>який складається із зірок і
+            міжзоряної
+            речовини — галактики Чумацький Шлях.</p>
+        <a href="#">
+            <img src="https://konkurent.ua/media/uploads/prev/2019/03/10/00/26/04/926bb50cddda4d0d49da64c8b87bb04e.png"
+                width="700px" alt="kolobok"> </a>
+
+    </footer>
 </body>
 
 </html>
