--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Hello</h1>
+        <h1>Hello</h1> <input type="text">
         <hr>
         <h2>Сoнячна система</h2>
     </header>
